--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -51,6 +51,11 @@
                                     <Font size="14.0" />
                                  </font>
                               </Button>
+                              <Button fx:id="editBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" text="-">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
                               <Button fx:id="playBtn" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" text="⏯">
                                  <font>
                                     <Font size="14.0" />
