Implement file chooser in EditorWindow
Took 2 hours 7 minutes

--- a/src/main/resources/EditorWindow.fxml
+++ b/src/main/resources/EditorWindow.fxml
@@ -65,7 +65,7 @@
       </GridPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <children>
-            <ListView fx:id="SoundsLv" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="0.0" />
+            <ListView fx:id="soundsLv" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="0.0" />
             <VBox layoutX="160.0" layoutY="5.0" prefHeight="200.0" prefWidth="45.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Button fx:id="addSoundBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" text="+">
