--- a/src/main/resources/LoginWindow.fxml
+++ b/src/main/resources/LoginWindow.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -37,6 +38,11 @@
             <Label text="Token:" GridPane.rowIndex="1" />
             <PasswordField fx:id="tokenBox" promptText="oauth:******************************" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Hyperlink fx:id="getTokenLink" text="Get a token here" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+            <ProgressIndicator fx:id="loginIndicator" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </ProgressIndicator>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
